Fixed: Bug 50793 - "order by" in message list overlaping (in Spanish)
Root cause: missing overflow handling
Solution: flexbox for the win; min-width 0 to allow ellipsis in children nodes; flex on button to keep caret-down still visible
Resolved state: Fix
Version: 7.8.4
Git repository: wd/frontend/web
Git branch: develop
Package name: open-xchange-appsuite

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -101,6 +101,28 @@
     }
 }
 
+.list-view-control.toolbar-top-visible .toolbar.top,
+.list-view-control.toolbar-bottom-visible .toolbar.bottom {
+    display: flex;
+    // button label ellipsis
+    .dropdown {
+        // disable flexbox auto calculation
+        min-width: 0;
+        // pull right
+        margin-left: auto;
+        & > a {
+            display: flex;
+            align-items: baseline;
+            span { .ellipsis(); }
+        }
+    }
+    // toolbar elements won't shrink
+    & > *:not('.dropdown') {
+        min-width: 0;
+        flex: 0 0 auto;
+    }
+}
+
 .list-item.small {
     padding-top: 7px;
     padding-bottom: 7px;
